kubernetes/apps/network/external-services/app/ap.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: &app ap
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app ap
  labels:
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - 192.168.1.4
    conditions:
      ready: true
---
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: &app ap
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: tls-passthrough
  hostnames: [ap.cloudjur.com]
  rules:
    - backendRefs: [{name: ap, port: 443}]
