kubernetes/apps/network/external-services/app/dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app adguard
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: &port 3000
      protocol: TCP
      targetPort: *port
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app adguard
  namespace: network
  labels:
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 3000
endpoints:
  - addresses:
      - "10.10.31.1"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app adguard
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: adguard.${SECRET_DOMAIN}
    # nginx.ingress.kubernetes.io/rewrite-target: /admin
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: internal
  rules:
    - host: &host adguard.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 80
  tls:
    - hosts:
        - *host
