kubernetes/apps/network/external-services/app/nas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app nas
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 9090
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app nas
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.30.10
      - 192.168.1.10
    conditions:
      ready: true
ports:
  - name: https
    port: 9090
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: &app nas
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames: ["nas.cloudjur.com"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: tls-passthrough
  rules:
    - backendRefs:
        - name: *app
          port: 443
