kubernetes/apps/network/external-services/app/proxmox.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: &app pve
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8006
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app pve
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.30.10
      - 192.168.1.10
    conditions:
      ready: true
ports:
  - name: https
    port: 8006
---
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: &app pve
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames: [pve.cloudjur.com]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: tls-passthrough
  rules:
    - backendRefs:
        - name: *app
          port: 443
