kubernetes/apps/network/external-services/app/smb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app smb
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app smb
  namespace: network
  labels:
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.10.30.10"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app smb
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: smb.cloudjur.com
    # nginx.ingress.kubernetes.io/rewrite-target: /admin
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: internal
  rules:
    - host: &host smb.cloudjur.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                annotations:
#                  lbipam.cilium.io/ips: 10.10.30.36
                name: *app
                port:
                  type: LoadBalancer
                  number: 80
  tls:
    - hosts:
        - *host
