kubernetes/apps/network/external-services/app/switch.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: &app switch
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app switch
  namespace: network
  labels:
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - 192.168.1.2
---
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: switch
  namespace: network
  labels:
    app.kubernetes.io/name: switch
    app.kubernetes.io/instance: switch
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network Infrastructure
    gethomepage.dev/name: Switch
    gethomepage.dev/description: Managed switch
    gethomepage.dev/icon: https://raw.githubusercontent.com/homarr-labs/dashboard-icons/main/png/tp-link.png
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - switch.cloudjur.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: switch
          port: 80
